<resources>
    <string name="app_name">Моя медкарта</string>
    <string name="mcard_name">Медицинская карта</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Моя мед. карта</string>
    <string name="app_title_for_reference_choose">Выбор визита, на котором получено направление.</string>
    <string name="app_title_for_directions_choose">Выбор визита-направления.</string>
    <string name="main_but_filter_text">Фильтр</string>
    <string name="main_but_filter_text_on">Фильтр вкл .</string>
    <string name="main_but_filter_text_off">Фильтр выкл.</string>
    <string name="no_vizits">Здесь будут отображаться все Ваши визиты к докторам, на процедуры,
        на исследования (анализы) - Ваши посещения поликлиник
        и других мед. учреждений.\nСейчас список визитов пуст.\nНажмите
        "Добавить", чтобы ввести первый.</string>
    <string name="no_filtred_vizits">Сейчас список визитов пуст.\nВозможно, выбран неверный фильтр.</string>
    <string name="main_but_filter_list_open">Выберите, пожалуйста, фильтр из списка.</string>
    <string name="main_filter_is_on">Не забудьте - включен фильтр.</string>
    <string name="item_main_visit_choice_question">Какой тип визита будем создавать?</string>
    <string name="item_main_visit_choice_visit">Визит к доктору на консультацию</string>
    <string name="item_main_visit_choice_analisis_visit">Визит на исследования - анализы и т.д.</string>
    <string name="mcard_main_list_for_direction_choice">Не может быть направления с визита исследования. Выберите визит-консультацию.</string>
    <string name="deleting_visit_title">Удаление визита...</string>
    <string name="deleting_visit_question">Действительно удалить визит?</string>
    <string name="deleting_visit_question_mini">Удалить?</string>
    <string name="common_caption">Название:</string>
    <string name="common_phones">Телефоны:</string>
    <string name="loading">Загрузка...</string>
    <string name="unloading">Выгрузка...</string>
    <string name="caption_basic">Основное</string>
    <string name="do_not_show_help_info">Не показывать больше подсказку?</string>
    <string name="save_visit_question">Визит еще не сохранен. Сохранить?</string>
    <string name="list_is_empty">Список пуст.</string>
    <string name="select_item">Выберите или создайте элемент.</string>
    <string name="must_set_item_name">Нужно ввести наименоание элемента.</string>
    <string name="item_update">Изменить</string>
    <string name="item_delete">Удалить</string>
    <string name="item_directions_new">Создать новый</string>
    <string name="item_directions_choose">Выбрать существующий</string>
    <string name="item_main_filter_choice">Другой фильтр</string>
    <string name="item_main_filter_off">Отключить фильтр</string>
    <string name="item_main_choice_theme">Изменить цветовое оформление</string>
    <string name="item_main_edit_profiles">Моя семья</string>
    <string name="item_main_edit_profiles1">Моя группа</string>
    <string name="item_main_edit_profiles2">Редактировать профили членов семьи</string>
    <string name="item_main_about">Версия приложения</string>
    <string name="item_main_backups">Резервное копирование приложения</string>
    <string name="but_save">сохранить</string>
    <string name="button_add">Добавить</string>
    <string name="button_add_to_list">Добавить в список</string>
    <string name="but_write">записать</string>
    <string name="but_close">закрыть</string>
    <string name="but_cancel">отменить</string>
    <string name="but_apply">применить</string>
    <string name="button_plus">+</string>
    <string name="button_open">-></string>
    <string name="button_ok">OK</string>
    <string name="but_continue">Продолжить</string>
    <string name="but_continue_help">Не показывать</string>
    <string name="but_cancel_help">Пусть будет пока</string>
    <string name="dialog_positive_button_text">Да</string>
    <string name="dialog_negative_button_text">Нет</string>
    <string name="dialog_positive_button_text_create">Создать</string>
    <string name="dialog_negative_button_text_cancel">Отмена</string>
    <string name="title_activity_visit">Визит</string>
    <string name="title1_activity_visit">основные параметры</string>
    <string name="visit_hint_date">дата визита</string>
    <string name="visit_hint_time">время визита</string>
    <string name="visit_hint_reference">кто направил</string>
    <string name="visit_hint_clinik">клиника</string>
    <string name="visit_hint_doctor">доктор (ФИО)</string>
    <string name="visit_hint_specialization">доктор (специализация)</string>
    <string name="visit_hint_diagnosis">диагноз</string>
    <string name="visit_tv_comment">Комментарий:</string>
    <string name="visit_but_directions">Направления</string>
    <string name="visit_but_cures">Назначения</string>
    <string name="visit_but_additionally">еще</string>
    <string name="visit_tab_recommendations">Рекомендации</string>
    <string name="visits_fragment_main_reference_caption">Направлено с визита:</string>
    <string name="visits_fragment_directions_list">Список направлений на анализы и другие исследования (УЗИ, МРТ и т.д.), а также на консультации к другим врачам, в том числе и на повторный прием.</string>
    <string name="visits_fragment_directions_list_help">Введите тип исследования и затем добавьте визит, на котором это исследование будет проводиться. Аналогично, выбирайте специализацию доктора, к которому направили, и затем добавляйте визит, на который пойдете (или сходили).</string>
    <string name="visits_fragment_directions_list_fab_add_directions_an_type">Добавить тип исследования</string>
    <string name="visits_fragment_directions_list_fab_add_directions_doctors_specialisation">Добавить специализацию доктора</string>
    <string name="visits_fragment_directions_list_hint_analisis_visit">добавьте визит-исследование</string>
    <string name="visits_fragment_directions_list_hint_visit">добавьте визит-консультацию</string>
    <string name="visits_fragment_directions_add_visit_dialog_title">Создадим новый визит или выберем существующий?</string>
    <string name="visits_fragment_directions_unlink_question">Вы действительно хотите отвязать направление от этого визита?</string>
    <string name="visits_fragment_cures_list_caption">Лист назначений (лекарства, уколы и другие процедуры):</string>
    <string name="visits_fragment_cures_list_help">Введите назначение и затем, если необходимо, добавьте визит-процедуру, на котором это назначение будет выполняться.</string>
    <string name="visits_fragment_cures_list_help_old">Введите назначение.</string>
    <string name="visits_fragment_cures_list_hint_prosedures_visit">добавьте (если нужно) визит на процедуру</string>
    <string name="visits_fragment_recommendations_list">Рекомендации по режиму:</string>
    <string name="visits_fragment_directions_chosen_different_types">Выбран неверный тип визита.</string>
    <string name="visits_fragment_directions_chosen_bad_visit">Нельзя выбирать "себя" как направление. Выбран неверный визит.</string>
    <string name="visit_must_not_delete_type_cures">Нельзя удалять визит. Сначала удалите назначения.</string>
    <string name="visit_must_not_delete_type_recommendations">Нельзя удалять визит. Сначала удалите рекомендации.</string>
    <string name="visit_must_not_delete_type_directions">Нельзя удалять визит. Сначала удалите направления.</string>
    <string name="visit_must_not_delete_type_analises_list">Нельзя удалять визит. Он используется в визитах-исследованиях, как направление.</string>
    <string name="visit_must_not_delete_type_photos">Нельзя удалять визит. Сначала удалите фотографии.</string>
    <string name="visit_additionally_title_activity">Визит</string>
    <string name="visit_additionally_title1_activity">дополнительные параметры</string>
    <string name="visit_additionally_tv_diagnosis">Диагноз:</string>
    <string name="visit_add_title_directions">Направления, выданные на визите</string>
    <string name="visit_add_title_cures">Назначения, рекомендации</string>
    <string name="visit_add_tv_directions">Список направлений на дообследования, на анализы и другие
        исследования (УЗИ, МРТ и т.д.), на консультации других докторов, а также на повторный прием:</string>
    <string name="visit_add_tv_cures">Лист назначений (лекарства, уколы и другие процедуры):</string>
    <string name="visit_add_tv_recommendations">Рекомендации по режиму:</string>
    <string name="visit_additionally_tv_cures">Назначения:</string>
    <string name="visit_additionally_tv_reference_old">От кого направление (кто направил):</string>
    <string name="visit_additionally_tv_reference">Визит, на котором получено направление:</string>
    <string name="visit_additionally_hint_edit_reference_old">визит направления</string>
    <string name="visit_additionally_hint_edit_reference">кто направил</string>
    <string name="visit_additionally_hint_edit_diagnosis">введите диагноз</string>
    <string name="doctor_caption_name">Имя:</string>
    <string name="visits_cures_title">Назначение по визиту</string>
    <string name="visits_cures_hint_cure">назначение (препарат, процедура)</string>
    <string name="visits_cures_hint_comment">порядок приема (например, 2 раза в день до еды)</string>
    <string name="cure_feature">Характеристика</string>
    <string name="mcard_main_drawer_menu_clinics">Мед. учреждения</string>
    <string name="mcard_main_drawer_menu_doctors">Доктора</string>
    <string name="mcard_main_drawer_menu_specialisations">Специализации докторов</string>
    <string name="mcard_main_drawer_menu_analises_types">Виды исследований</string>
    <string name="mcard_main_drawer_menu_diagnoses">Диагнозы</string>
    <string name="mcard_main_drawer_menu_cures">Виды назначений</string>
    <string name="mcard_main_drawer_menu_recommendations">Рекомендации</string>
    <string name="mcard_main_drawer_menu_fast_filters">Быстрые фильтры</string>
    <string name="mcard_main_drawer_menu_filter_ext">Расширенный фильтр</string>
    <string name="mcard_main_drawer_menu_filter_off">Отключить фильтр</string>
    <string name="mcard_main_drawer_menu_group_lists_title">Списки</string>
    <string name="mcard_main_drawer_menu_group_filters_title">Фильтры</string>
    <string name="mcard_main_drawer_menu_group_add_title">Дополнительно</string>
    <string name="edit_profiles_toolbar_title">Профиль (редактирование)</string>
    <string name="edit_profiles_title">Карточка члена семьи</string>
    <string name="edit_profiles_sex_caption">Пол</string>
    <string name="edit_profiles_sex_m">Мужской</string>
    <string name="edit_profiles_sex_w">Женский</string>
    <string name="edit_profiles_birthday_caption">День рождения</string>
    <string name="edit_profiles_birthday">введите день рождения</string>
    <string name="backup_title">Резервное копирование приложения</string>
    <string name="backup_btn_onbackup">Сохранить копию приложения в облако</string>
    <string name="backup_btn_onresrore">Восстановить приложение из облака</string>
    <string name="backup_hint_backup_done">Дата и время отправки в облако</string>
    <string name="backup_hint_backup_in_cloud_done">bm прошел (Дата и время)</string>
    <string name="backup_hint_backup_in_cloud_done_yes_no">bm забрал backup в облако (да, нет)</string>
    <string name="backup_hint_backup_in_cloud_date_time">Дата и время попадания backup-а в облако</string>
    <string name="backup_hint_backup_old_state"> backup OldState</string>
    <string name="backup_hint_backup_new_state_before_backup">NewState before Backup</string>
    <string name="backup_hint_backup_new_state_after_backup">NewState after Backup</string>
    <string name="backup_hint_restore_new_state">restore NewState</string>
    <string name="backup_hint_on_restore_done">onRestore выполнена</string>
    <string name="backup_sdcard_title">Копирование на SD карту</string>
</resources>