<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/groupLists"
        android:title="@string/mcard_main_drawer_menu_group_lists_title"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clinics"
            android:title="@string/mcard_main_drawer_menu_clinics" />
        <item
            android:id="@+id/nav_doctors"
            android:title="@string/mcard_main_drawer_menu_doctors" />
        <item
            android:id="@+id/nav_specialisations"
            android:title="@string/mcard_main_drawer_menu_specialisations" />
        <item
            android:id="@+id/nav_analises_types"
            android:title="@string/mcard_main_drawer_menu_analises_types" />
        <item
            android:id="@+id/nav_diagnoses"
            android:title="@string/mcard_main_drawer_menu_diagnoses" />
        <item
            android:id="@+id/nav_cures"
            android:title="@string/mcard_main_drawer_menu_cures" />
        <item
            android:id="@+id/nav_recommendations"
            android:title="@string/mcard_main_drawer_menu_recommendations" />
    </group>

    <group
        android:id="@+id/groupFilters"
        android:title="@string/mcard_main_drawer_menu_group_filters_title"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fast_filters"
            android:title="@string/mcard_main_drawer_menu_fast_filters" />
        <item
            android:id="@+id/nav_filter_ext"
            android:title="@string/mcard_main_drawer_menu_filter_ext" />
        <item
            android:id="@+id/nav_filter_off"
            android:title="@string/mcard_main_drawer_menu_filter_off" />
    </group>
    <group
        android:id="@+id/groupAdd"
        android:title="@string/mcard_main_drawer_menu_group_add_title"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_themes_choice"
            android:title="@string/item_main_choice_theme" />
        <item
            android:id="@+id/nav_profiles"
            android:title="@string/item_main_edit_profiles" />
        <item
            android:id="@+id/nav_backups"
            android:title="@string/item_main_backups" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/item_main_about" />
    </group>

<!--    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:title="Send" />
        </menu>
    </item>
-->

    <!--
             android:icon="@drawable/ic_menu_camera"
             android:icon="@drawable/ic_menu_gallery"
             android:icon="@drawable/ic_menu_slideshow"
             android:icon="@drawable/ic_menu_manage"
             android:icon="@drawable/ic_menu_share"
             android:icon="@drawable/ic_menu_send"
    -->

</menu>
