<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlVisitsCuresContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.kai.mcard.MVisitsCureActivity"
    style="?attr/mainBackground">

    <android.support.design.widget.AppBarLayout
        app:theme="?attr/toolBar"
        android:id="@+id/mVisitsCuresAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mVisitsCuresToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:title="@string/visits_cures_title">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        style="?attr/styleEditsViewContainer"
        android:id="@+id/rlVisitsCure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filds_margin"
        android:layout_marginLeft="@dimen/filds_margin"
        android:layout_marginRight="@dimen/filds_margin"
        android:layout_below="@+id/mVisitsCuresAppBarLayout">

        <AutoCompleteTextView
            style="@style/StyleEditsView"
            android:id="@+id/editVisitsCure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visits_cures_hint_cure"
            android:inputType="textAutoComplete"
            android:layout_toLeftOf="@+id/btnOpenVisitsCure" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/btnOpenVisitsCure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_open"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_alignBottom="@+id/editVisitsCure"
            android:onClick="btnVisitsCureOpen"/>

    </RelativeLayout>

    <TextView
        style="?attr/tvCaptions"
        android:id="@+id/tvVisitsCuresFeature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cure_feature"
        android:textStyle="normal"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="@dimen/filds_margin"
        android:layout_below="@+id/rlVisitsCure" />

    <TextView
        style="?attr/tvCaptions"
        android:id="@+id/tvVisitsCuresComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit_tv_comment"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="@dimen/filds_margin"
        android:layout_marginRight="@dimen/filds_margin"
        android:layout_below="@+id/tvVisitsCuresFeature"/>

    <EditText
        style="?attr/styleEditsViewWithoutContainer"
        android:id="@+id/editVisitsCuresDescr"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/filds_margin"
        android:layout_marginLeft="@dimen/filds_margin"
        android:layout_marginRight="@dimen/filds_margin"
        android:inputType="textMultiLine"
        android:hint="@string/visits_cures_hint_comment"
        android:gravity="top|left"
        android:layout_below="@+id/tvVisitsCuresComment"/>



</RelativeLayout>

